build es6 source before publish

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "RESTful client",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node_modules/babel-cli/bin/babel.js src --out-dir lib"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/MonkeyKingPlus/restful-client/issues"
   },
-  "homepage": "https://github.com/MonkeyKingPlus/restful-client#readme"
+  "homepage": "https://github.com/MonkeyKingPlus/restful-client#readme",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0"
+  }
 }
