--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "mkp-restful-client",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "RESTful client",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
-    "publish":"node_modules/babel-cli/bin/babel.js src --out-dir lib && npm publish"
+    "build": "node_modules/babel-cli/bin/babel.js src --out-dir lib"
   },
   "repository": {
     "type": "git",
