--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.16.0"
-  }
+  },
+  "keywords":[
+    "react-native",
+    "react",
+    "RESTful",
+    "RESTful-client",
+    "ajax"
+  ]
 }
