--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/MonkeyKingPlus/restful-client#readme",
   "devDependencies": {
-    "babel-cli": "^6.16.0",
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.17.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-preset-es2015": "^6.16.0"
   },
-  "keywords":[
+  "keywords": [
     "react-native",
     "react",
     "RESTful",
